--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^9.1.1",
     "@angular/common": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/flex-layout": "^9.0.0-beta.29",
