Conexión con firebase y terminado de login. Datos de usuario es un dummie

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/animations": "^9.1.1",
     "@angular/common": "~8.2.14",
     "@angular/core": "~8.2.14",
+    "@angular/fire": "^6.0.0",
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
@@ -30,6 +31,7 @@
     "@ngrx/store": "^8.6.0",
     "@ngrx/store-devtools": "^8.6.0",
     "core-js": "^2.5.4",
+    "firebase": "^7.14.3",
     "ion-custom-form-builder": "0.0.25",
     "ngx-toastr": "^11.3.3",
     "rxjs": "~6.5.1",
