--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "core-js": "^2.5.4",
     "firebase": "^7.14.3",
     "ion-custom-form-builder": "0.0.25",
+    "moment": "^2.26.0",
     "ngx-toastr": "^11.3.3",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
