--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/pwa-elements": "^1.5.2",
     "@ngrx/effects": "^8.6.0",
     "@ngrx/store": "^8.6.0",
     "@ngrx/store-devtools": "^8.6.0",
     "core-js": "^2.5.4",
     "firebase": "^7.14.3",
     "ion-custom-form-builder": "0.0.25",
+    "lodash": "^4.17.15",
+    "lodash.isempty": "^4.4.0",
     "moment": "^2.26.0",
     "ngx-toastr": "^11.3.3",
     "rxjs": "~6.5.1",
