--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 4004",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -40,6 +40,7 @@
     "lodash": "^4.17.15",
     "lodash.isempty": "^4.4.0",
     "moment": "^2.26.0",
+    "nan": "^2.14.2",
     "ngx-toastr": "^11.3.3",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
